--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ android {
 }
 
 dependencies {
+    implementation 'pub.devrel:easypermissions:2.0.1'
+
     implementation 'com.google.android.material:material:1.0.0'
 
     def lifecycle_version = "2.0.0"
